--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -87,7 +87,7 @@
      <x>0</x>
      <y>0</y>
      <width>750</width>
-     <height>22</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuEditor">
@@ -286,11 +286,20 @@
    </property>
   </action>
   <action name="dactionMultiView">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>false</bool>
+   </property>
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>MultiView</string>
    </property>
    <property name="toolTip">
-    <string>&lt;p&gt;Share the screen area between multiple open profiles.&lt;/p&gt;</string>
+    <string comment="Same text is used in 2 places.">&lt;p&gt;Splits the Mudlet screen to show multiple profiles at once; disabled when less than two are loaded.&lt;/p&gt;</string>
    </property>
   </action>
   <action name="dactionInputLine">
