Server Data Encoding Selection via Telnet CHARSET (#3972)
* Add TELOPT_CHARSET (42) Support

* Add TELOPT_CHARSET (42) Support

* Add TELOPT_CHARSET (42) Support

* Add TELOPT_CHARSET (42) Support

* Add TELOPT_CHARSET (42) Support

* Add TELOPT_CHARSET (42) Support

--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -2640,6 +2640,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="mFORCE_CHARSET_NEGOTIATION_OFF">
+            <property name="text">
+             <string>Force CHARSET negotiation off</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QLabel" name="need_reconnect_for_specialoption">
             <property name="enabled">
              <bool>true</bool>
@@ -5332,6 +5339,7 @@
   <tabstop>mFORCE_GA_OFF</tabstop>
   <tabstop>checkBox_mUSE_FORCE_LF_AFTER_PROMPT</tabstop>
   <tabstop>mFORCE_MXP_NEGOTIATION_OFF</tabstop>
+  <tabstop>mFORCE_CHARSET_NEGOTIATION_OFF</tabstop>
   <tabstop>comboBox_discordLargeIconPrivacy</tabstop>
   <tabstop>checkBox_discordServerAccessToDetail</tabstop>
   <tabstop>comboBox_discordSmallIconPrivacy</tabstop>
