MXP to MSP Tags (#4015)
* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* MXP to MSP Tags

* test/CMakeLists.txt update

* test/CMakeLists.txt update backout

* test/CMakeLists.txt update

--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -302,7 +302,7 @@
              <string>&lt;p&gt;Enables MSP - provides Mud Sound Protocol messages during game play for supported games&lt;/p&gt;</string>
             </property>
             <property name="text">
-             <string>Enable MSP  (Mud Sound Protocol, experimental in Mudlet)</string>
+             <string>Enable MSP  (Mud Sound Protocol)</string>
             </property>
            </widget>
           </item>
