--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -5161,6 +5161,16 @@ you can use it but there could be issues with aligning columns of text</string>
             </layout>
            </widget>
           </item>
+          <item row="5" column="0">
+           <widget class="QCheckBox" name="checkBox_debugShowAllCodepointProblems">
+            <property name="text">
+             <string>Report all Codepoint problems immediately</string>
+            </property>
+            <property name="toolTip">
+             <string>&lt;p&gt;If checked this will cause all problem Unicode codepoints to be reported in the debug output as they occur; if cleared then each different one will only be reported once and summerised in as a table when the console in which they occurred is finally destroyed (when the profile is closed).&lt;/p&gt;</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
@@ -5377,6 +5387,7 @@ you can use it but there could be issues with aligning columns of text</string>
   <tabstop>checkbox_noAutomaticUpdates</tabstop>
   <tabstop>search_engine_combobox</tabstop>
   <tabstop>checkBox_showIconsOnMenus</tabstop>
+  <tabstop>checkBox_debugShowAllCodepointProblems</tabstop>
   <tabstop>checkBox_expectCSpaceIdInColonLessMColorCode</tabstop>
   <tabstop>comboBox_store_passwords_in</tabstop>
   <tabstop>timeEdit_timerDebugOutputMinimumInterval</tabstop>
