Plug in Cleft of Dimensions (#4284)
* Plug in Cleft of Dimensions

* Update mudlet.qrc

--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -34,6 +34,7 @@
         <file>icons/carrionfields.png</file>
         <file>icons/chronometer.png</file>
         <file>icons/clessidra.jpg</file>
+        <file>icons/cleftofdimensions.png</file>
         <file>icons/configure.png</file>
         <file>icons/dash-dot-dot-line.png</file>
         <file>icons/dash-dot-line.png</file>
