--- a/src/ui/mapper.ui
+++ b/src/ui/mapper.ui
@@ -290,7 +290,7 @@
                   </font>
                  </property>
                  <property name="text">
-                  <string>⯇</string>
+                  <string notr="true">⯇</string>
                  </property>
                  <property name="autoRepeat">
                   <bool>true</bool>
@@ -330,7 +330,7 @@
                   </size>
                  </property>
                  <property name="text">
-                  <string>⯆</string>
+                  <string notr="true">⯆</string>
                  </property>
                  <property name="autoRepeat">
                   <bool>true</bool>
@@ -370,7 +370,7 @@
                   </size>
                  </property>
                  <property name="text">
-                  <string>⯅</string>
+                  <string notr="true">⯅</string>
                  </property>
                  <property name="autoRepeat">
                   <bool>true</bool>
@@ -410,7 +410,7 @@
                   </size>
                  </property>
                  <property name="text">
-                  <string>⯈</string>
+                  <string notr="true">⯈</string>
                  </property>
                  <property name="autoRepeat">
                   <bool>true</bool>
@@ -456,7 +456,7 @@
                   </font>
                  </property>
                  <property name="text">
-                  <string>+</string>
+                  <string notr="true">+</string>
                  </property>
                 </widget>
                </item>
@@ -493,7 +493,7 @@
                   </font>
                  </property>
                  <property name="text">
-                  <string>-</string>
+                  <string notr="true">-</string>
                  </property>
                 </widget>
                </item>
