--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -342,7 +342,7 @@
           <item row="0" column="0" colspan="2">
            <widget class="QCheckBox" name="mIsToLogInHtml">
             <property name="toolTip">
-             <string>&lt;p&gt;When checked will cause the date-stamp named log file to be HTML (file extention '.html') which can convey color, font and other formatting information rather than a plain text (file extension '.txt') format.  If changed while logging is already in progress it is necessary to stop and restart logging for this setting to take effect in a new log file.&lt;/p&gt;</string>
+             <string>&lt;p&gt;When checked will cause the date-stamp named log file to be HTML (file extension '.html') which can convey color, font and other formatting information rather than a plain text (file extension '.txt') format.  If changed while logging is already in progress it is necessary to stop and restart logging for this setting to take effect in a new log file.&lt;/p&gt;</string>
             </property>
             <property name="text">
              <string>Save log files in HTML format instead of plain text</string>
