--- a/src/ui/profile_preferences.ui
+++ b/src/ui/profile_preferences.ui
@@ -243,7 +243,7 @@
           <item row="1" column="0">
            <widget class="QCheckBox" name="mFORCE_SAVE_ON_EXIT">
             <property name="text">
-             <string>Force auto save on exit</string>
+             <string>Auto save on exit</string>
             </property>
            </widget>
           </item>
