Multiple package selection in package manager (#4552)
* multiple package selection in package manager

* codefactor correction

Co-authored-by: Piotr Wilczynski <piotr.wilczynski@bisnode.com>
Co-authored-by: Vadim Peretokin <vperetokin@gmail.com>

--- a/src/ui/package_manager.ui
+++ b/src/ui/package_manager.ui
@@ -21,7 +21,11 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
-       <widget class="QListWidget" name="packageList"/>
+       <widget class="QListWidget" name="packageList">
+        <property name="selectionMode">
+         <enum>QAbstractItemView::ExtendedSelection</enum>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QWidget" name="widget_2" native="true">
