Map Info contributors - adjustable map info (#4718)
* initial changes form map info overrides

* code styling fix

* fix code style

* add api to toggle map info providers
validation of arguments
turn off 2d buttons on 3d map
remove obsolte map info references

* change naming
make qmake build work

* set short map info as default

* use default color if wrong or not complete value is provided

* cr fixes

* replace toggle with enable and disable api

* order of contributors is order of insertion

* add missing changes

* apply code review changes
minor improvements

* legacy setting 'showInfo' will be stored according to contributors state

* fix seg fault
untangle includes

* fix another seg fault
fix reregistering map info contributor

* mapInfo will be based solely on map contributors
XmlImport will set legacy full info if first running old progile

* do not store map info unless mapContributors are empty

* cr adjustments
adjust to new validation in lua interpreter
make gap smaller between providers

* Update src/dlgMapper.cpp

Co-authored-by: Vadim Peretokin <vperetokin@gmail.com>

* remove unintentional change

* add error handling for map info callback functions

Co-authored-by: Piotr Wilczynski <piotr.wilczynski@bisnode.com>
Co-authored-by: Vadim Peretokin <vperetokin@gmail.com>

--- a/src/ui/mapper.ui
+++ b/src/ui/mapper.ui
@@ -500,7 +500,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QWidget" name="a" native="true">
+          <widget class="QWidget" name="d2buttons" native="true">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
              <horstretch>0</horstretch>
@@ -602,19 +602,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QCheckBox" name="showInfo">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>50</width>
-                <height>0</height>
-               </size>
-              </property>
+             <widget class="QPushButton" name="info_pushButton">
               <property name="text">
                <string>Info</string>
               </property>
