--- a/src/ui/dlgPackageExporter.ui
+++ b/src/ui/dlgPackageExporter.ui
@@ -388,7 +388,7 @@
               </size>
              </property>
              <property name="text">
-              <string>+</string>
+              <string notr="true">+</string>
              </property>
             </widget>
            </item>
