allow drag and drop and copy/paste of images onto package description in package exporter (#5058)
* allow drag and drop of images onto description

* return true got lost

* copy packagePath/.mudlet

* allow copy/paste of images

* codefactor

* Update dlgPackageExporter.h

* didn't compile

* disable copy_move

* allow insert on cursor position if copy/paste

if image is inserted with copy paste it will be insert at the cursor position, drag and drop images will always be inserted at the end.
Images won't be duplicated anymore

* image names as placeholder + svg support

* clearer comment

* Update placeholder to mention markdown and dnd support

Co-authored-by: Vadim Peretokin <vperetokin@gmail.com>

--- a/src/ui/dlgPackageExporter.ui
+++ b/src/ui/dlgPackageExporter.ui
@@ -212,12 +212,12 @@
           </widget>
          </item>
          <item row="3" column="1">
-          <widget class="QTextEdit" name="textEdit_description">
+          <widget class="dlgPackageExporterDescription" name="textEdit_description">
            <property name="tabChangesFocus">
             <bool>true</bool>
            </property>
            <property name="placeholderText">
-            <string>optional</string>
+            <string>optional. Markdown supported, and you can add images with drag and drop</string>
            </property>
           </widget>
          </item>
@@ -437,6 +437,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>dlgPackageExporterDescription</class>
+   <extends>QTextEdit</extends>
+   <header>dlgPackageExporter.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>pushBotton_openInfos</tabstop>
   <tabstop>lineEdit_author</tabstop>
