Improve some texts for translations (#5186)
* Remove path/filename from translations

* "Remove packages" as plural

* untangle texts, settle "format version"

* Split more texts

* get rid of double "this"

--- a/src/ui/package_manager.ui
+++ b/src/ui/package_manager.ui
@@ -216,7 +216,7 @@
             <enum>Qt::TabFocus</enum>
            </property>
            <property name="text">
-            <string>Remove package</string>
+            <string>Remove packages</string>
            </property>
           </widget>
          </item>
