--- a/src/mudlet.qrc
+++ b/src/mudlet.qrc
@@ -15,6 +15,8 @@
         <file>icons/achaea_120_30.png</file>
         <file>icons/aetolia_120_30.png</file>
         <file>icons/application-exit.png</file>
+        <file>icons/application-json.png</file>
+        <file>icons/application-xml.png</file>
         <file>icons/applications-accessories.png</file>
         <file>icons/applications-engineering.png</file>
         <file>icons/applications-internet.png</file>
