add notion that that new area can be crated

--- a/src/ui/set_room_area.ui
+++ b/src/ui/set_room_area.ui
@@ -32,8 +32,13 @@
     <layout class="QHBoxLayout" name="layout_footer">
      <item>
       <widget class="QLabel" name="label_info">
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
        <property name="text">
-        <string/>
+        <string>Input new area name to create one.</string>
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
